@@ -4,7 +4,7 @@ module Etc; end
 
 class Protocol::V01::TestAttributes < Net::SFTP::TestCase
   def test_from_buffer_should_correctly_parse_buffer_and_return_attribute_object
-    attributes = Net::SFTP::Protocol::V01::Attributes.from_buffer(full_buffer)
+    attributes = attributes_factory.from_buffer(full_buffer)
 
     assert_equal 1234567890, attributes.size
     assert_equal 100, attributes.uid
@@ -18,7 +18,7 @@ class Protocol::V01::TestAttributes < Net::SFTP::TestCase
   def test_from_buffer_should_correctly_parse_buffer_with_attribute_subset_and_return_attribute_object
     buffer = Net::SSH::Buffer.from(:long, 0x4, :long, 0755)
 
-    attributes = Net::SFTP::Protocol::V01::Attributes.from_buffer(buffer)
+    attributes = attributes_factory.from_buffer(buffer)
 
     assert_equal 0755, attributes.permissions
 
@@ -31,7 +31,7 @@ class Protocol::V01::TestAttributes < Net::SFTP::TestCase
   end
 
   def test_attributes_to_s_should_build_binary_representation
-    attributes = Net::SFTP::Protocol::V01::Attributes.new(
+    attributes = attributes_factory.new(
       :size => 1234567890,
       :uid  => 100, :gid => 200,
       :permissions => 0755,
@@ -42,12 +42,12 @@ class Protocol::V01::TestAttributes < Net::SFTP::TestCase
   end
 
   def test_attributes_to_s_should_build_binary_representation_when_subset_is_present
-    attributes = Net::SFTP::Protocol::V01::Attributes.new(:permissions => 0755)
+    attributes = attributes_factory.new(:permissions => 0755)
     assert_equal Net::SSH::Buffer.from(:long, 0x4, :long, 0755).to_s, attributes.to_s
   end
 
   def test_attributes_to_s_with_owner_and_group_should_translate_to_uid_and_gid
-    attributes = Net::SFTP::Protocol::V01::Attributes.new(:owner => "jamis", :group => "sftp")
+    attributes = attributes_factory.new(:owner => "jamis", :group => "sftp")
     attributes.expects(:require).with("etc").times(2)
     Etc.expects(:getpwnam).with("jamis").returns(mock('user', :uid => 100))
     Etc.expects(:getgrnam).with("sftp").returns(mock('group', :gid => 200))
@@ -55,17 +55,29 @@ class Protocol::V01::TestAttributes < Net::SFTP::TestCase
   end
 
   def test_owner_should_translate_from_uid
-    attributes = Net::SFTP::Protocol::V01::Attributes.new(:uid => 100)
+    attributes = attributes_factory.new(:uid => 100)
     attributes.expects(:require).with("etc")
     Etc.expects(:getpwuid).with(100).returns(mock('user', :name => "jamis"))
     assert_equal "jamis", attributes.owner
   end
 
   def test_group_should_translate_from_gid
-    attributes = Net::SFTP::Protocol::V01::Attributes.new(:gid => 200)
+    attributes = attributes_factory.new(:gid => 200)
     attributes.expects(:require).with("etc")
     Etc.expects(:getgrgid).with(200).returns(mock('group', :name => "sftp"))
     assert_equal "sftp", attributes.group
+  end
+
+  def test_type_should_infer_type_from_permissions
+    assert_equal af::T_SOCKET,       af.new(:permissions => 0140755).type
+    assert_equal af::T_SYMLINK,      af.new(:permissions => 0120755).type
+    assert_equal af::T_REGULAR,      af.new(:permissions => 0100755).type
+    assert_equal af::T_BLOCK_DEVICE, af.new(:permissions =>  060755).type
+    assert_equal af::T_DIRECTORY,    af.new(:permissions =>  040755).type
+    assert_equal af::T_CHAR_DEVICE,  af.new(:permissions =>  020755).type
+    assert_equal af::T_FIFO,         af.new(:permissions =>  010755).type
+    assert_equal af::T_UNKNOWN,      af.new(:permissions =>    0755).type
+    assert_equal af::T_UNKNOWN,      af.new.type
   end
 
   private
@@ -76,4 +88,10 @@ class Protocol::V01::TestAttributes < Net::SFTP::TestCase
         :long, 0755, :long, 1234567890, :long, 2345678901,
         :long, 1, :string, "first", :string, "second")
     end
+
+    def attributes_factory
+      Net::SFTP::Protocol::V01::Attributes
+    end
+
+    alias af attributes_factory
 end
