@@ -1,3 +1,8 @@
+=== *unreleased*
+
+* More complete support for file-type detection in protocol versions 1-3 [Jamis Buck]
+
+
 === 2.0 Preview Release 2 (1.99.1) / 10 Apr 2008
 
 * Custom properties on Upload instances [Jamis Buck]
